--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "built/index.js",
   "scripts": {
-    "test:unit": "find ./specs/ -name '*.spec.ts' | xargs mocha --require ts-node/register --timeout 30000"
+    "test:unit": "find ./specs/ -name '*.spec.ts' | xargs mocha --require ts-node/register --timeout 30000",
+    "lint": "eslint --ext .ts ./",
+    "built": "tsc"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,9 @@
     "@typescript-eslint/parser": "^3.8.0",
     "chai": "^4.2.0",
     "eslint": "^7.6.0",
+    "eslint-plugin-chai-expect": "^2.2.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^8.1.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
