--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2018",
     "sourceMap": true,
     "outDir": "built",
+    "declaration": true,
     "experimentalDecorators": true,
     "allowJs": true
   },
