add unit tests, add sync proxify interface

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "built/index.js",
   "scripts": {
-    "test:unit": "find ./specs/ -name '*.spec.ts' | xargs mocha --require ts-node/register --timeout 30000",
+    "test": "find ./specs/ -name '*.spec.ts' | xargs mocha --require ts-node/register --timeout 30000",
     "lint": "eslint --ext .ts ./",
     "built": "rm -rf ./built && tsc"
   },
