--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proxify-method",
-  "version": "0.0.5",
-  "description": "",
+  "version": "0.0.7",
+  "description": "Project for flexible extension of the existing functionality",
   "main": "built/index.js",
   "scripts": {
     "test": "find ./specs/ -name '*.spec.ts' | xargs mocha --require ts-node/register --timeout 30000",
@@ -17,6 +17,13 @@
   "bugs": {
     "url": "https://github.com/Simple-Automation-Testing/api-framework/issues"
   },
+  "keywords": [
+    "proxy object",
+    "proxify",
+    "flexible extension",
+    "extension",
+    "proxy method"
+  ],
   "homepage": "https://github.com/Simple-Automation-Testing/api-framework#readme",
   "devDependencies": {
     "@types/chai": "^4.2.12",
@@ -24,6 +31,7 @@
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "assertior": "0.0.9",
     "chai": "^4.2.0",
     "eslint": "^7.6.0",
     "eslint-plugin-chai-expect": "^2.2.0",
