--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
   ],
   "homepage": "https://github.com/Simple-Automation-Testing/api-framework#readme",
   "devDependencies": {
-    "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.1",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
-    "assertior": "0.0.9",
-    "chai": "^4.2.0",
+    "assertior": "^0.0.22",
     "eslint": "^7.6.0",
     "eslint-plugin-chai-expect": "^2.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
